[gd_scene load_steps=12 format=2]

[ext_resource path="res://road-sheet.png" type="Texture" id=1]
[ext_resource path="res://addons/shapes/base_texture.png" type="Texture" id=2]
[ext_resource path="res://addons/shapes/Shapes.shader" type="Shader" id=3]
[ext_resource path="res://addons/shapes/shapescript.gd" type="Script" id=4]
[ext_resource path="res://NotesArrows/ArrowButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://NotesArrows/Frames/arrow_right_frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://NotesArrows/Frames/arrow_up_frames.tres" type="SpriteFrames" id=7]
[ext_resource path="res://MainScript.gd" type="Script" id=8]
[ext_resource path="res://Templates/Song.gd" type="Script" id=9]
[ext_resource path="res://Conductor/Conductor.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/shape = 1
shader_param/poly_count = 3
shader_param/chosen_color = Color( 0.0235294, 0.0235294, 0.0313726, 1 )
shader_param/outline_width = 1.0
shader_param/shape_feather = 0.0
shader_param/outline_feather = 0.05

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="road-sheet" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 4, 2.308 )
texture = ExtResource( 1 )
hframes = 2

[node name="ShapeSprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 376, 360 )
scale = Vector2( 0.25, 11.25 )
texture = ExtResource( 2 )
script = ExtResource( 4 )
shape = "Square"
color = Color( 0.0235294, 0.0235294, 0.0313726, 1 )
outline_width = 1.0
shape_feather = 0.0

[node name="ArrL" parent="." instance=ExtResource( 5 )]
position = Vector2( 480, 600 )
scale = Vector2( 1, 1 )

[node name="ArrU" parent="." instance=ExtResource( 5 )]
position = Vector2( 640, 600 )
scale = Vector2( 1, 1 )
frames = ExtResource( 7 )
dir = "Up"

[node name="ArrR" parent="." instance=ExtResource( 5 )]
position = Vector2( 800, 600 )
scale = Vector2( 1, 1 )
frames = ExtResource( 6 )
dir = "Right"

[node name="SongScriptHolder" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Conductor" parent="." instance=ExtResource( 10 )]

[node name="Notes" type="Node2D" parent="."]

[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
